# edgeimpulse-ros

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  package.xml  setup.cfg  setup.cfg.install  setup.py
.github/workflows/: ci.yml
config/: edgeimpulse_detector.yaml
edgeimpulse_ros/: package.xml  setup.cfg  setup.py
edgeimpulse_ros/resource/: edgeimpulse_ros
edgeimpulse_ros/src/edgeimpulse_ros/: edgeimpulse_detector.py
launch/: edgeimpulse_detector.launch.py  edgeimpulse_with_camera.launch.py
src/edgeimpulse_ros/: __init__.py  conversions.py  edgeimpulse_detector.py  image_utils.py  model_runner.py  nv12_publisher.py
test/: test_conversions.py  test_flake8.py  test_image_utils.py  test_model_info.py  test_pep257.py  test_smoke.py
