[metadata]
name = edgeimpulse_ros
version = 0.1.0
description = ROS2 wrapper to run Edge Impulse object detection

[develop]
script_dir=$base/lib/edgeimpulse_ros

[install]
install_scripts=$base/lib/edgeimpulse_ros

[options]
package_dir =
    = src
packages = find:
install_requires =
    setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    edgeimpulse_detector = edgeimpulse_ros.edgeimpulse_detector:main
